--- a/theapplicationswhiz/templates/home.html
+++ b/theapplicationswhiz/templates/home.html
@@ -5,6 +5,28 @@
 {% block main %}
 
 
-<h1>home</h1>
+<h1>Applications</h1>
+<!-- #object list is all the apps -->
+{% for application in object_list %}
+<ul>
+<li> {{ application.title }} </li>
+<li> {{ application.author }} </li>
+<li> {{ application.date_added }} </li>
+<li> {{ application.job_post }} </li>
+<li> {{ application.company_name }} </li>
+<li> {{ application.company_website }} </li>
+<li> {{ application.location }} </li>
+<li> {{ application.salary }} </li>
+<li> {{ application.company_size }} </li>
+<li> {{ application.submission_status }} </li>
+<li> {{ application.remote }} </li>
+<li> {{ application.next_steps }} </li>
+<li> {{ application.notes }} </li>
+
+
+{% endfor %}
+
+
+</ul>
 
 {% endblock %}
