--- a/theapplicationswhiz/templates/base.html
+++ b/theapplicationswhiz/templates/base.html
@@ -25,7 +25,7 @@
             <div class="nav-wrapper">
                 <ul class="left">
                     <li>
-                        <a href="">
+                        <a href="{% url 'home' %}">
                             <img src="" alt="">The Applications Whiz Logo Here
                         </a>
                     </li>
@@ -34,8 +34,9 @@
            
    
                 <ul class="right">
+                    <li><a href="{% url 'applications' %}">View Applications</a></li>
                     <li><a href="">Login</a></li>
-                    <li><a href="">Track New Application</a></li>
+                    
        
                 </ul>
             </div>
