--- a/theapplicationswhiz/templates/base.html
+++ b/theapplicationswhiz/templates/base.html
@@ -5,8 +5,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-        <title>My Career Whiz</title>
+   
+        <title>
+            {% block title %}
+            My Career Whiz
+            {% endblock %}
+        </title>
     
         <!-- Materialize CSS -->
         <link rel="stylesheet" 
@@ -30,24 +34,33 @@
                         </a>
                     </li>
                 </ul>
-
-           
-   
                 <ul class="right">
                     <li><a href="{% url 'applications' %}">View Applications</a></li>
                     <li><a href="">Login</a></li>
-                    
-       
                 </ul>
             </div>
-          
+                <nav>
+                    <div class="nav-wrapper">
+                      <form>
+                        <div class="input-field">
+                          <input id="search" type="search" required>
+                          <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                          <i class="material-icons">close</i>
+                        </div>
+                      </form>
+                    </div>
+                  </nav>
         </nav>
     </header>
+ <br/> <br/>
     <main>
+        <div class="container">
         {% block main %}
         {% endblock %}
+    </div>
     </main>
-    
+
+ 
     
 </body>
 </html>
