--- a/theapplicationswhiz/templates/applications.html
+++ b/theapplicationswhiz/templates/applications.html
@@ -4,6 +4,7 @@
 
 {% block main %}
 
+{% block title %} {{ user.first_name }} - Your Applications {% endblock %}
 
 <h1>Applications</h1>
 <!-- #object list is all the apps -->
@@ -21,5 +22,14 @@
 
 
 </ul>
+<ul class="pagination">
+    <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+    <li class="active"><a href="#!">1</a></li>
+    <li class="waves-effect"><a href="#!">2</a></li>
+    <li class="waves-effect"><a href="#!">3</a></li>
+    <li class="waves-effect"><a href="#!">4</a></li>
+    <li class="waves-effect"><a href="#!">5</a></li>
+    <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+  </ul>
 
 {% endblock %}
