--- a/theapplicationswhiz/templates/base.html
+++ b/theapplicationswhiz/templates/base.html
@@ -17,7 +17,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!-- Local CSS -->
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
         <!-- Compiled and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <!-- Jquery -->
@@ -36,7 +36,10 @@
                 </ul>
                 <ul class="right">
                     <li><a href="{% url 'applications' %}">View Applications</a></li>
+                    <li><a href="{% url 'add_application' %}">+ New Application</a></li>
                     <li><a href="">Login</a></li>
+             
+
                 </ul>
             </div>
                 <nav>
