--- a/theapplicationswhiz/templates/application_detail.html
+++ b/theapplicationswhiz/templates/application_detail.html
@@ -31,11 +31,11 @@
 
 {% if not application.notes.all %}
 
-No notes yet... <a href="">add one</a>
+No notes yet... <a href="{% url 'add_note' application.pk %}">add one</a>
 
 {%  else %}
 <br/><br/>
-<a href="">Add Note</a>
+<a href="{% url 'add_note' application.pk %}">Add Note</a>
 {% for note in application.notes.all %}
 <h6> <b>{{ note.name }} - {{ note.date_added }}</b></h6>
 
@@ -44,7 +44,6 @@ No notes yet... <a href="">add one</a>
 {% endfor %}
 {% endif %}
 <br/><br/><br/><br/>
-
 
 
 <a href="{% url 'applications' %}"class="waves-effect waves-light btn">Back</a>
