--- a/theapplicationswhiz/templates/add_note.html
+++ b/theapplicationswhiz/templates/add_note.html
@@ -5,6 +5,7 @@
 {% block title %} {{ application.title }} {% endblock %}
 {% block main %}
 <br/><br/><br/>
+<h1>Add Note</h1>
 <div class="form-group">
     <form method="POST">
         {% csrf_token %}
