--- a/theapplicationswhiz/templates/application_detail.html
+++ b/theapplicationswhiz/templates/application_detail.html
@@ -26,8 +26,8 @@
 </ul>
 
 <br/><br/>
-
-<h3>Notes...</h3>
+<hr/>
+<h3>Notes... for {{ application.title }} </h3>
 
 {% if not application.notes.all %}
 
@@ -48,14 +48,6 @@ No notes yet... <a href="{% url 'add_note' application.pk %}">add one</a>
 <br/><br/><br/><br/>
 
 
-
-<ul>
-    <li>
-        <a href="{% url 'application-detail' application.pk %}"> {{ application.title }}</a> </br>
-        {{ application.owner.first_name }} {{ application.owner.last_name }} - {{ application.owner.email }} -  <a href="{% url 'application_update' application.pk %}">  update </br>
-     
-    </li>
-</ul>
 
 <br/><br/><br/><br/>
 
