creates category choice list

--- a/theapplicationswhiz/templates/application_detail.html
+++ b/theapplicationswhiz/templates/application_detail.html
@@ -22,6 +22,9 @@
         {{ application.remote }} </br>
         {{ application.next_steps }} </br>
         {{ application.notes }} </br>
+        <b>
+            {{ application.category }} </br>
+        </b>
     </li>
 </ul>
 
