--- a/theapplicationswhiz/templates/base.html
+++ b/theapplicationswhiz/templates/base.html
@@ -37,7 +37,7 @@
                 <ul class="right">
                     <li><a href="{% url 'applications' %}">View Applications</a></li>
                     <li><a href="{% url 'add_application' %}">+ New Application</a></li>
-                    <li><a href="">Login</a></li>
+                    <li><a href="{% url 'add_category' %}">Add Category</a></li>
              
 
                 </ul>
