--- a/theapplicationswhiz/templates/base.html
+++ b/theapplicationswhiz/templates/base.html
@@ -36,8 +36,10 @@
                 </ul>
                 <ul class="right">
                     <li><a href="{% url 'applications' %}">View Applications</a></li>
+                    <li><a href="{% url 'contacts' %}">View Contacts</a></li>
                     <li><a href="{% url 'add_application' %}">+ New Application</a></li>
                     <li><a href="{% url 'add_category' %}">Add Category</a></li>
+                    <li><a href="{% url 'add_contact' %}">Add Contact</a></li>
              
 
                 </ul>
