--- a/theapplicationswhiz/templates/contacts.html
+++ b/theapplicationswhiz/templates/contacts.html
@@ -1,4 +1,17 @@
+{% extends 'base.html' %}
+
+{% load static %}
+
+{% block main %}
+
+<h1>Your Contacts</h1>
 
 
-<h1>Contacts</h1>
 
+
+
+
+
+
+
+{% endblock %}
