--- a/theapplicationswhiz/templates/base.html
+++ b/theapplicationswhiz/templates/base.html
@@ -40,21 +40,11 @@
                     <li><a href="{% url 'add_application' %}">+ New Application</a></li>
                     <li><a href="{% url 'add_category' %}">Add Category</a></li>
                     <li><a href="{% url 'add_contact' %}">Add Contact</a></li>
+                    
              
 
                 </ul>
             </div>
-                <nav>
-                    <div class="nav-wrapper">
-                      <form>
-                        <div class="input-field">
-                          <input id="search" type="search" required>
-                          <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                          <i class="material-icons">close</i>
-                        </div>
-                      </form>
-                    </div>
-                  </nav>
         </nav>
     </header>
  <br/> <br/>
@@ -63,6 +53,9 @@
         {% block main %}
         {% endblock %}
     </div>
+    {{ month }}
+
+    {{ year }}
     </main>
 
  
