--- a/theapplicationswhiz/templates/application_detail.html
+++ b/theapplicationswhiz/templates/application_detail.html
@@ -49,7 +49,7 @@
         </div>
         <div class="card-action">
           <a href=" {{ application.job_post }}" target="_blank">Job Post URL</a>
-          <a href=" {{ application.company_website }}"  target="_blank"> {{ application.company_name}} website </a>
+          <a href=" {{ application.company_website }}"  target="_blank"> company website </a>
           <a href="{% url 'add_note' application.pk %}">Add a Note</a>
           
         </div>
