--- a/theapplicationswhiz/templates/contact_detail.html
+++ b/theapplicationswhiz/templates/contact_detail.html
@@ -37,15 +37,12 @@
         
             </tr>
           </table>
-          <br/>  <br/>    <br/>
-      
-
+          <div class="card-action">
+            <a href=" {{ contact.linkedin_profile }}" target="_blank">LinkedIn Profile</a>
+           
+            
+          </div>
         
-       
-
-<hr/>
-
-<br/><br/><br/><br/>
 
 
 {% endblock %}
