ommits categories for now

--- a/theapplicationswhiz/templates/application_detail.html
+++ b/theapplicationswhiz/templates/application_detail.html
@@ -37,7 +37,7 @@
             </tr>
           </table>
           <br/>  <br/>    <br/>
-        <h4> Application Stage: {{ application.category }}</h4>
+        <!-- <h4> Application Stage: {{ application.category }}</h4> -->
         <br/>  <br/>    <br/>
         <small>
           <td>remote? {{ application.remote }}</td>
