--- a/theapplicationswhiz/templates/base.html
+++ b/theapplicationswhiz/templates/base.html
@@ -37,9 +37,9 @@
                 <ul class="right">
                     <li><a href="{% url 'applications' %}">View Applications</a></li>
                     <li><a href="{% url 'contacts' %}">View Contacts</a></li>
-                    <li><a href="{% url 'categories' %}">View Categories</a></li>
-                    <li><a href="{% url 'add_application' %}">+ Add Application</a></li>
-                    <li><a href="{% url 'add_category' %}">Add Category</a></li>
+                  
+                    <li><a href="{% url 'add_application' %}">Add Application</a></li>
+                  
                     <li><a href="{% url 'add_contact' %}">Add Contact</a></li>
                     
              
